--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,34 @@
 version: 2.1
-orbs:
-  node: circleci/node@3.0.0
-workflows:
-  node-tests:
-    jobs:
-      - node/test
+jobs:
+  build:
+    docker:
+      - image: circleci/node:10.14.2
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+      
+      - restore_cache:
+        keys:
+          - vi-dependencies-{{ checksum "package.json" }}
+          - vi-dependencies-
+      - run: yarn install
+
+      - save_cache:
+        paths:
+          - node_modules
+        key: vi-dependencies-{{ checksum "package.json" }}
+
+      - run:
+        name: Install Junit coverage reporter
+        command: yarn add --dev jest-junit
+      - run:
+        name: Run tests with JUnit as reporter
+        command: npx jest --ci --runInBand --reporters=default --reporters=jest-junit
+          environment:
+            JEST_JUNIT_OUTPUT_DIR: "./junit/test-results.xml"
+          when: always
+      - store_test_results:
+          path: ./junit
+      - store_artifacts:
+          path: ./junit
